// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollList /> should render when [noContainer=false] 1`] = `
<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  isElement={true}
  noContainer={false}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <div />
</ScrollList>
`;

exports[`<ScrollList /> should return LoadingPlaceholder when [documents=null] and [page<pageCount] 1`] = `
<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  documents={null}
  isElement={true}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <div>
    <LoadingPlaceholder
      margin="20px"
    >
      <LoadingPlaceholder__StyledLoadingPlaceholder
        margin="20px"
      >
        <div
          className="LoadingPlaceholder__StyledLoadingPlaceholder-sc-1yo1zdt-0 ieNfPS"
        >
          <Loader>
            <Loader__StyledLoader
              color="greyDark"
              size="22px"
            >
              <div
                className="Loader__StyledLoader-sc-338y7h-0 gqdnXn"
                color="greyDark"
                size="22px"
              >
                <div />
              </div>
            </Loader__StyledLoader>
          </Loader>
        </div>
      </LoadingPlaceholder__StyledLoadingPlaceholder>
    </LoadingPlaceholder>
  </div>
</ScrollList>
`;

exports[`<ScrollList /> should return React.Fragment when [noContainer=true] 1`] = `
<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  isElement={true}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <div />
</ScrollList>
`;
